fix nav issues on mobile

--- a/SASS/_navs.scss
+++ b/SASS/_navs.scss
@@ -5,6 +5,8 @@
   text-align: right;
   // margin-bottom:30px;
   z-index: 100;
+  display:flex;
+  align-items: center;
   background-color:rgba(255, 255, 255, 0.9);
   // height:79px;
   .brgr-index{
@@ -17,23 +19,15 @@
     cursor: pointer;
   }
 }
-.brgr-mytools{
-  position: relative;
-  right:0px;
-  padding:10px 0px;
-  display: inline-flex;
-  justify-content: flex-end;
-  overflow-x: visible;
-  cursor: pointer;
-}
 .nav-projects{
   position: fixed;
   top:0;
   left:0;
-  // height:50px;
   width:100%;
   z-index: 200;
   margin:auto;
+  display:flex;
+  align-items: center;
   background-color: rgba(255, 255, 255, 0.9);
   height:50px;
   .brgr-projects{
