--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -216,21 +216,13 @@
   width: 100%;
   text-align: right;
   z-index: 100;
+  display: flex;
+  align-items: center;
   background-color: rgba(255, 255, 255, 0.9);
 }
 .nav-index .brgr-index {
   position: relative;
   right: 0;
-  padding: 10px 0px;
-  display: inline-flex;
-  justify-content: flex-end;
-  overflow-x: visible;
-  cursor: pointer;
-}
-
-.brgr-mytools {
-  position: relative;
-  right: 0px;
   padding: 10px 0px;
   display: inline-flex;
   justify-content: flex-end;
@@ -245,6 +237,8 @@
   width: 100%;
   z-index: 200;
   margin: auto;
+  display: flex;
+  align-items: center;
   background-color: rgba(255, 255, 255, 0.9);
   height: 50px;
 }
